@@ -72,7 +72,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M4</version>
 				<configuration>
-					<argLine>--enable-preview</argLine>
+					<argLine>--enable-preview --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -80,7 +80,7 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>3.0.0-M4</version>
 				<configuration>
-					<argLine>--enable-preview</argLine>
+					<argLine>--enable-preview --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
